--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>3D Modelim</title>
+  <title>DodgeViperGtByTzer0x</title>
   <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
   <style>
     body { margin: 0; background-color: #000; display: flex; justify-content: center; align-items: center; height: 100vh; }
